--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,7 +2,7 @@
   --white: #fff;
   --light-gray: #d6e2f0;
   --grayish-blue: #7b879d;
-  --dark-blue: #1f3251
+  --dark-blue: #1f3251;
 }
 
 * {
@@ -10,5 +10,44 @@
   padding: 0;
   list-style: 0;
   font-family: 'Outfit', sans-serif;
+}
+
+body {
+  background-color: var(--light-gray);
+  min-height: 100svh;
+  text-align: center;
   font-size: 15px;
+  line-height: 1.5;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
+.card {
+  width: 90%;
+  margin: auto;
+  max-width: 400px;
+  border-radius: 1rem;
+  padding: 10px;
+  box-sizing: border-box;
+  background-color: var(--white);
+  box-shadow: 0px 4px 6px -1px var(--grayish-blue);
+}
+.qrcode {
+  border-radius: 1rem;
+  overflow: hidden;
+  margin-bottom: 2rem;
+}
+.qrcode img{
+  width: 100%;
+  vertical-align: middle;
+}
+.title {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+.describe {
+  width: 70%;
+  margin: auto;
+  color: var(--grayish-blue);
+  margin-bottom: 1rem;
 }
